--- a/index.html
+++ b/index.html
@@ -4,44 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="style.css" />
     <title>personal-portfolio</title>
   </head>
   <body>
     <header>
-      <nav class="toolbar-nav">
-        <a href="#" class="logo">My Logo</a>
-        <span class="menu">
-          <svg
-            width="18"
-            height="12"
-            viewBox="0 0 18 12"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M0 1C0 0.447715 0.447715 0 1 0H17C17.5523 0 18 0.447715 18 1C18 1.55228 17.5523 2 17 2H1C0.447715 2 0 1.55228 0 1ZM0 6C0 5.44772 0.447715 5 1 5L17 5C17.5523 5 18 5.44772 18 6C18 6.55229 17.5523 7 17 7L1 7C0.447715 7 0 6.55228 0 6ZM1 10C0.447715 10 0 10.4477 0 11C0 11.5523 0.447715 12 1 12H17C17.5523 12 18 11.5523 18 11C18 10.4477 17.5523 10 17 10H1Z"
-              fill="#6070FF"
-            />
-          </svg>
-        </span>
+      <div class="my-logo">
+        <a href="#" class="logo">Rejoice</a>
+        <nav class="menu-bar">
+          <i class="fas fa-bars"></i>
       </nav>
+    </div>
     </header>
 
     <section class="headline-wrap">
       <div class="flex headline-wrap">
-        <h2 class="greetings">I’m Rejoice Glad to see you!</h2>
+        <h1 class="greetings">I’m Rejoice <br>Glad to  see <br> you!</h1>
         <p class="headline-profile margin-top-12">
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
           you see and have a project you need coded, don’t hesitate to contact
           me.
         </p>
+        <br>
         <a class="lets-connect margin-top-12">
           <h3>LET’S CONNECT</h3>
         </a>
+        <br>
         <ul class="social-icons margin-top-12">
           <li>
             <a href="#">
