--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>personal-portfolio</title>
   </head>
@@ -14,24 +17,27 @@
         <a href="#" class="logo">Rejoice</a>
         <nav class="menu-bar">
           <i class="fas fa-bars"></i>
-      </nav>
-    </div>
+        </nav>
+      </div>
     </header>
 
     <section class="headline-wrap">
       <div class="flex headline-wrap">
-        <h1 class="greetings">I’m Rejoice <br>Glad to  see <br> you!</h1>
+        <h1 class="greetings">
+          I’m Rejoice <br />Glad to see <br />
+          you!
+        </h1>
         <p class="headline-profile margin-top-12">
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
           you see and have a project you need coded, don’t hesitate to contact
           me.
         </p>
-        <br>
+        <br />
         <a class="lets-connect margin-top-12">
           <h3>LET’S CONNECT</h3>
         </a>
-        <br>
+        <br />
         <ul class="social-icons margin-top-12">
           <li>
             <a href="#">
