add files to both html and style.css file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    />
+      />
     <link rel="stylesheet" href="style.css" />
     <title>personal-portfolio</title>
   </head>
@@ -20,7 +20,6 @@
         </nav>
       </div>
     </header>
-
     <section class="headline-wrap">
       <div class="flex headline-wrap">
         <h1 class="greetings">
@@ -41,6 +40,208 @@
         <ul class="social-icons margin-top-12">
           <li>
             <a href="#">
+            <img
+              class="social twitter"
+              src="image/icons/twitter.png"
+              alt="Twitter icon"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+            <img
+              class="social linkedin"
+              src="image/icons/linkedin.png"
+              alt="linkedin icon"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+            <img class="social m" src="image/icons/m.png" alt="m icon" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+            <img
+              class="social github"
+              src="image/icons/github.png"
+              alt="github icon"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+            <img
+              class="social fin"
+              src="image/icons/fin.png"
+              alt="fin icon"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="works">
+      <div class="grid works-grid-container wrap padding-top-0">
+        <div class="flex works-grid-item">
+          <img
+            class="width-100"
+            src="image/tonic.jpg"
+            alt="portfolio screenshot"
+          />
+          <h3 class="section-title margin-top-12">portfolio</h3>
+          <div class="work-period">
+            <ul>
+              <li class="text-color-primary">Canopy</li>
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+          </div>
+          <p class="work-description text-color-primary margin-top-20">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="work-categories margin-top-12 padding-0">
+            <li><span>html</span></li>
+            <li><span>css</span></li>
+            <li><span>javascript</span></li>
+          </ul>
+          <div>
+          <button type="button" class="button button-enabled">
+            See Project
+          </button>
+          </div>
+        </div>
+        <div class="flex works-grid-item">
+          <img
+            class="width-100"
+            src="image/to-do-list.jpg"
+            alt="todolist screenshot"
+          />
+          <h3 class="section-title margin-top-12">to do list app</h3>
+          <div class="work-period">
+            <ul>
+              <li class="text-color-primary">Canopy</li>
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+          </div>
+          <p class="work-description text-color-primary margin-top-20">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="work-categories margin-top-12 padding-0">
+            <li><span>html</span></li>
+            <li><span>css</span></li>
+            <li><span>javascript</span></li>
+          </ul>
+          <div>
+          <button type="button" class="button button-enabled">
+            See Project
+          </button>
+          </div>
+        </div>
+        <div class="flex works-grid-item">
+          <img
+            class="width-100"
+            src="image/fitness.png"
+            alt="fitness screenshot"
+          />
+          <h3 class="section-title margin-top-12">fitness</h3>
+          <div class="work-period">
+            <ul>
+              <li class="text-color-primary">Canopy</li>
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+          </div>
+          <p class="work-description text-color-primary margin-top-20">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="work-categories margin-top-12 padding-0">
+            <li><span>html</span></li>
+            <li><span>css</span></li>
+            <li><span>javascript</span></li>
+          </ul>
+          <div>
+          <button type="button" class="button button-enabled">
+            See Project
+          </button>
+          </div>
+        </div>
+        <div class="flex works-grid-item">
+          <img
+            class="width-100"
+            src="image/styling.png"
+            alt="styling screenshot"
+          />
+          <h3 class="section-title margin-top-12">printing</h3>
+          <div class="work-period">
+            <ul>
+              <li class="text-color-primary">Canopy</li>
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+          </div>
+          <p class="work-description text-color-primary margin-top-20">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="work-categories margin-top-12 padding-0">
+            <li><span>html</span></li>
+            <li><span>css</span></li>
+            <li><span>javascript</span></li>
+          </ul>
+          <div>
+          <button type="button" class="button button-enabled">
+            See Project
+          </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about-myself padding-top-114">
+      <div class="flex about-wrap">
+        <h2 class="section-title">About myself</h2>
+        <p class="headline-profile text-color-primary margin-top-12">
+          I’m a software developer! I can help you build a product , feature or
+          website. Look through some of my work and experience! If you like what
+          you see and have a project you need coded, don’t hestiate to contact
+          me.
+        </p>
+        <a class="lets-connect margin-top-12">
+          <h3>Let's connect</h3>
+        </a>
+        <ul class="social-icons margin-top-12">
+          <li>
+            <a href="#">
+              <img
+                class="social github"
+                src="image/icons/github.png"
+                alt="Twitter icon"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                class="social linkedin"
+                src="image/icons/linkedin.png"
+                alt="Twitter icon"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="social fin" src="image/icons/fin.png" alt="Twitter icon" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
               <img
                 class="social twitter"
                 src="image/icons/twitter.png"
@@ -51,36 +252,111 @@
           <li>
             <a href="#">
               <img
-                class="social linkedin"
-                src="image/icons/linkedin.png"
-                alt="linkedin icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img class="social m" src="image/icons/m.png" alt="m icon" />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                class="social github"
-                src="image/icons/github.png"
-                alt="github icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img
-                class="social fin"
-                src="image/icons/fin.png"
-                alt="fin icon"
+                class="social m"
+                src="image/icons/m.png"
+                alt="Twitter icon"
               />
             </a>
           </li>
         </ul>
+        <div>
+        <button type="button" class="button button-enabled">
+          See my resume
+        </button>
+        </div>
+        <div class="other-info">
+          <ul class="flex other-info-wrap padding-0">
+            <li class="other-info-list">
+              <div class="flex li-flex wrap">
+                <h4>Languages</h4>
+                <span>
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
+                      fill="#5E6C84"
+                    />
+                  </svg>
+                </span>
+              </div>
+              <ul class="other-info-details">
+                <li class="flex view-list-item">
+                  <img
+                    class="lang-icon"
+                    src="image/icons/Javascript.png"
+                    alt="JavaScript icon"
+                  />
+                  <span class="lang-name">JavaScript</span>
+                </li>
+                <li class="flex view-list-item">
+                  <img
+                    class="lang-icon"
+                    src="image/icons/html.png"
+                    alt="HTML icon"
+                  />
+                  <span class="lang-name">HTML</span>
+                </li>
+                <li class="flex view-list-item">
+                  <img
+                    class="lang-icon"
+                    src="image/icons/CSS.png"
+                    alt="CSS icon"
+                  />
+                  <span class="lang-name">CSS</span>
+                </li>
+              </ul>
+            </li>
+            <li class="other-info-list">
+              <div class="flex li-flex wrap">
+                <h4>Frameworks</h4>
+                <span>
+                  <svg
+                    width="24"
+                    height="25"
+                    viewBox="0 0 24 25"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M9.29289 5.43962C9.68342 5.0491 10.3166 5.0491 10.7071 5.43962L16.7071 11.4396C17.0976 11.8301 17.0976 12.4633 16.7071 12.8538L10.7071 18.8538C10.3166 19.2444 9.68342 19.2444 9.29289 18.8538C8.90237 18.4633 8.90237 17.8301 9.29289 17.4396L14.5858 12.1467L9.29289 6.85384C8.90237 6.46331 8.90237 5.83015 9.29289 5.43962Z"
+                      fill="#505F79"
+                    />
+                  </svg>
+                </span>
+              </div>
+            </li>
+            <li class="other-info-list">
+              <div class="flex li-flex wrap">
+                <h4>Skills</h4>
+                <span>
+                  <svg
+                    width="24"
+                    height="25"
+                    viewBox="0 0 24 25"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M9.29289 5.43962C9.68342 5.0491 10.3166 5.0491 10.7071 5.43962L16.7071 11.4396C17.0976 11.8301 17.0976 12.4633 16.7071 12.8538L10.7071 18.8538C10.3166 19.2444 9.68342 19.2444 9.29289 18.8538C8.90237 18.4633 8.90237 17.8301 9.29289 17.4396L14.5858 12.1467L9.29289 6.85384C8.90237 6.46331 8.90237 5.83015 9.29289 5.43962Z"
+                      fill="#505F79"
+                    />
+                  </svg>
+                </span>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
   </body>
