modified style.css and index.html file

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             src="image/tonic.jpg"
             alt="portfolio screenshot"
           />
-          <h3 class="section-title margin-top-12">portfolio</h3>
+          <h1 class="section-title margin-top-12">Portfolio</h1>
           <div class="work-period">
             <ul>
               <li class="text-color-primary">Canopy</li>
@@ -120,7 +120,7 @@
             src="image/to-do-list.jpg"
             alt="todolist screenshot"
           />
-          <h3 class="section-title margin-top-12">to do list app</h3>
+          <h1 class="section-title margin-top-12">To do list app</h1>
           <div class="work-period">
             <ul>
               <li class="text-color-primary">Canopy</li>
@@ -149,7 +149,7 @@
             src="image/fitness.png"
             alt="fitness screenshot"
           />
-          <h3 class="section-title margin-top-12">fitness</h3>
+          <h1 class="section-title margin-top-12">fitness</h1>
           <div class="work-period">
             <ul>
               <li class="text-color-primary">Canopy</li>
@@ -178,7 +178,7 @@
             src="image/styling.png"
             alt="styling screenshot"
           />
-          <h3 class="section-title margin-top-12">printing</h3>
+          <h1 class="section-title margin-top-12">Printing</h1>
           <div class="work-period">
             <ul>
               <li class="text-color-primary">Canopy</li>
@@ -206,7 +206,7 @@
 
     <section class="about-myself padding-top-114">
       <div class="flex about-wrap">
-        <h2 class="section-title">About myself</h2>
+        <h2 class="section-title">About <br> myself</h2>
         <p class="headline-profile text-color-primary margin-top-12">
           I’m a software developer! I can help you build a product , feature or
           website. Look through some of my work and experience! If you like what
