updated style.css file

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <li><span>javascript</span></li>
           </ul>
           <div>
-          <button type="button" class="button button-enabled">
+            <button type="button" class="button button-enabled">
             See Project
           </button>
           </div>
@@ -138,7 +138,7 @@
             <li><span>javascript</span></li>
           </ul>
           <div>
-          <button type="button" class="button button-enabled">
+            <button type="button" class="button button-enabled">
             See Project
           </button>
           </div>
@@ -167,7 +167,7 @@
             <li><span>javascript</span></li>
           </ul>
           <div>
-          <button type="button" class="button button-enabled">
+            <button type="button" class="button button-enabled">
             See Project
           </button>
           </div>
@@ -196,7 +196,7 @@
             <li><span>javascript</span></li>
           </ul>
           <div>
-          <button type="button" class="button button-enabled">
+            <button type="button" class="button button-enabled">
             See Project
           </button>
           </div>
@@ -206,7 +206,7 @@
 
     <section class="about-myself padding-top-114">
       <div class="flex about-wrap">
-        <h2 class="section-title">About <br> myself</h2>
+        <h2 class="section-title">About <br> Myself</h2>
         <p class="headline-profile text-color-primary margin-top-12">
           I’m a software developer! I can help you build a product , feature or
           website. Look through some of my work and experience! If you like what
