fixed style of contact form

--- a/index.html
+++ b/index.html
@@ -361,7 +361,10 @@
     </section>
 
     <footer class="contact_container">
+      <div class="background-contact"></div>
+      <div class="background-white"></div>
       <div class="contact_bg">
+        
         <div class="container flex flex-column">
           <h2 class="other-info">contact me</h2>
           <p class="msg-dsc">
