Add flex to form contact

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-      />
+    />
     <link rel="stylesheet" href="style.css" />
     <title>personal-portfolio</title>
   </head>
@@ -40,42 +40,42 @@
         <ul class="social-icons margin-top-12">
           <li>
             <a href="#">
-            <img
-              class="social twitter"
-              src="image/icons/twitter.png"
-              alt="Twitter icon"
+              <img
+                class="social twitter"
+                src="image/icons/twitter.png"
+                alt="Twitter icon"
               />
             </a>
           </li>
           <li>
             <a href="#">
-            <img
-              class="social linkedin"
-              src="image/icons/linkedin.png"
-              alt="linkedin icon"
+              <img
+                class="social linkedin"
+                src="image/icons/linkedin.png"
+                alt="linkedin icon"
               />
             </a>
           </li>
           <li>
             <a href="#">
-            <img class="social m" src="image/icons/m.png" alt="m icon" />
+              <img class="social m" src="image/icons/m.png" alt="m icon" />
             </a>
           </li>
           <li>
             <a href="#">
-            <img
-              class="social github"
-              src="image/icons/github.png"
-              alt="github icon"
+              <img
+                class="social github"
+                src="image/icons/github.png"
+                alt="github icon"
               />
             </a>
           </li>
           <li>
             <a href="#">
-            <img
-              class="social fin"
-              src="image/icons/fin.png"
-              alt="fin icon"
+              <img
+                class="social fin"
+                src="image/icons/fin.png"
+                alt="fin icon"
               />
             </a>
           </li>
@@ -110,8 +110,8 @@
           </ul>
           <div>
             <button type="button" class="button button-enabled">
-            See Project
-          </button>
+              See Project
+            </button>
           </div>
         </div>
         <div class="flex works-grid-item">
@@ -139,8 +139,8 @@
           </ul>
           <div>
             <button type="button" class="button button-enabled">
-            See Project
-          </button>
+              See Project
+            </button>
           </div>
         </div>
         <div class="flex works-grid-item">
@@ -168,8 +168,8 @@
           </ul>
           <div>
             <button type="button" class="button button-enabled">
-            See Project
-          </button>
+              See Project
+            </button>
           </div>
         </div>
         <div class="flex works-grid-item">
@@ -197,8 +197,8 @@
           </ul>
           <div>
             <button type="button" class="button button-enabled">
-            See Project
-          </button>
+              See Project
+            </button>
           </div>
         </div>
       </div>
@@ -206,7 +206,10 @@
 
     <section class="about-myself padding-top-114">
       <div class="flex about-wrap">
-        <h2 class="section-title">About <br> Myself</h2>
+        <h2 class="section-title">
+          About <br />
+          Myself
+        </h2>
         <p class="headline-profile text-color-primary margin-top-12">
           I’m a software developer! I can help you build a product , feature or
           website. Look through some of my work and experience! If you like what
@@ -237,7 +240,11 @@
           </li>
           <li>
             <a href="#">
-              <img class="social fin" src="image/icons/fin.png" alt="Twitter icon" />
+              <img
+                class="social fin"
+                src="image/icons/fin.png"
+                alt="Twitter icon"
+              />
             </a>
           </li>
           <li>
@@ -260,9 +267,9 @@
           </li>
         </ul>
         <div>
-        <button type="button" class="button button-enabled">
-          See my resume
-        </button>
+          <button type="button" class="button button-enabled">
+            See my resume
+          </button>
         </div>
         <div class="other-info">
           <ul class="flex other-info-wrap padding-0">
@@ -364,7 +371,6 @@
       <div class="background-contact"></div>
       <div class="background-white"></div>
       <div class="contact_bg">
-        
         <div class="container flex flex-column">
           <h2 class="other-info">contact me</h2>
           <p class="msg-dsc">
