--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>personal-portfolio</title>
+    <title>responsive website portfolio</title>
   </head>
   <body>
     <header>
@@ -64,7 +64,7 @@
           </li>
           <li>
             <a href="#">
-              <img class="social m" src="image/icons/m.png" alt="m icon" />
+              <img class="social medium" src="image/icons/m.png" alt="medium icon" />
             </a>
           </li>
           <li>
@@ -241,7 +241,7 @@
                   <img
                     class="social github"
                     src="image/icons/github.png"
-                    alt="Twitter icon"
+                    alt="github icon"
                   />
                 </a>
               </li>
@@ -250,7 +250,7 @@
                   <img
                     class="social linkedin"
                     src="image/icons/linkedin.png"
-                    alt="Twitter icon"
+                    alt="linkedin icon"
                   />
                 </a>
               </li>
@@ -259,7 +259,7 @@
                   <img
                     class="social fin"
                     src="image/icons/fin.png"
-                    alt="Twitter icon"
+                    alt="fin icon"
                   />
                 </a>
               </li>
@@ -277,7 +277,7 @@
                   <img
                     class="social m"
                     src="image/icons/m.png"
-                    alt="Twitter icon"
+                    alt="medium icon"
                   />
                 </a>
               </li>
