add form validation to index.html style.css file

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
         ></textarea>
 
         <div class="form-group">
+          <div class="form-errors"> Email should be in lowercase</div>
           <button type="submit" class="button button-enabled contact-button">
             Get In Touch
           </button>
