add validation to the contact

--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
         />
 
         <input
+          id="input"
           type="email"
           name="email"
           required
@@ -315,7 +316,7 @@
 
         <div class="form-group">
           <div class="form-errors"> Email should be in lowercase</div>
-          <button type="submit" class="button button-enabled contact-button">
+          <button type="submit" class="button button-enabled contact-button" onclick="validate()">
             Get In Touch
           </button>
         </div>
