--- a/index.html
+++ b/index.html
@@ -315,8 +315,12 @@
         ></textarea>
 
         <div class="form-group">
-          <div class="form-errors"> Email should be in lowercase</div>
-          <button type="submit" class="button button-enabled contact-button" onclick="validate()">
+          <div class="form-errors">Email should be in lowercase</div>
+          <button
+            type="submit"
+            class="button button-enabled contact-button"
+            onclick="validate()"
+          >
             Get In Touch
           </button>
         </div>
