--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
           name="name"
           required
           placeholder="your name"
+          id="fullname"
         />
 
         <input
@@ -300,6 +301,7 @@
           type="email"
           name="email"
           required
+          id="email"
           maxlength="30"
           placeholder="example@email.com"
         />
@@ -307,6 +309,7 @@
         <textarea
           class="textarea"
           aria-required="true"
+          id="message"
           name="message"
           required
           rows="10"
